# todor

./: Cargo.toml  README.md  justfile
.github/: release.yml  release.yml.ignore
.github/workflows/: release.yaml
assets/web/: index.html
docs/: encrypted-box.md  routine-tasks-v1.md  routine-tasks-v2.md  routine-tasks-v3.md  routine-tasks.md
pkg/brew/: todor-bin.rb
scripts/: sha256-releases.sh  t2reminders.scpt
src/: boxops.rs  cli.rs  conf.rs  lib.rs  main.rs  styles.rs  taskbox.rs  util.rs  webui.rs
tests/: taskbox.rs
