[package]
name = "todor"
version = "0.6.0"
edition = "2021"
authors = ["JF Ding <jfding@gmail.com>"]
description = "yet another cli TODO in Rust"
repository = "https://github.com/jfding/todor"
license = "Apache2.0"
keywords = ["todo", "rust", "cli"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
cmd_lib = "1.9.4"
colored = "2.1.0"
crossterm = "0.28.1"
dirs = "5.0.1"
inquire = "0.7.5"
regex = "1.10.6"

[patch.crates-io]
inquire = { git = "https://github.com/jfding/inquire" }
