[package]
name = "todor"
version = "1.6.0"
edition = "2021"
authors = ["JF Ding <jfding@gmail.com>"]
description = "yet another cli TODO in Rust"
repository = "https://github.com/jfding/todor"
license = "Apache-2.0"
keywords = ["todo", "rust", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
cmd_lib = "1.9.4"
colored = "2.1.0"
crossterm = "0.28.1"
dirs = "5.0.1"
inquire = "0.7.5"
lazy_static = "1.5.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"

[profile.release-with-symbols]
inherits = "release"
strip = false

[dev-dependencies]
tempfile = "3.2"