[package]
name = "todor"
version = "1.9.2"
edition = "2021"
authors = ["JF Ding <jfding@gmail.com>"]
description = "yet another cli TODO in Rust"
repository = "https://github.com/jfding/todor"
license = "Apache-2.0"
keywords = ["todo", "rust", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
cmd_lib = "1.9.5"
colored = "2.1.0"
crossterm = "0.28.1"
dirs = "5.0.1"
inquire = { version = "0.7.5", features = ["date"] }
lazy_static = "1.5.0"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
which = "6.0.3"

[target.'cfg(unix)'.dependencies]
stdio-override = "0.1.3"

[profile.release-with-symbols]
inherits = "release"
strip = false

[dev-dependencies]
tempfile = "3.2"
